# youtube_summarizer

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  tldw.py
yt_summarizer/: base.py
